fix container overflow bug

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 .container {
-    width: 450px;
-    height: 450px;
+    width: 470px;
+    height: 470px;
     margin: 0 auto;
     border: 10px solid black;
 
@@ -22,7 +22,6 @@ body {
 }
 
 .box {
-    border: 1px solid black;
     background-color: #2b2b2b;
     opacity: 0%;
 }
